--- a/ansible/adhoc-ipausers.yml
+++ b/ansible/adhoc-ipausers.yml
@@ -1,8 +1,7 @@
 ---
 # This playbook is meant to be used with callable variables, like adhoc or AWX.
-# However, adhoc, it works fine as long as you mention all required variables.
 # 
-# What: Creates users in the idm infrastructure
+# What: Creates users in the idm infrastructure based on the variables provided.
 
 - name: Create a User
   hosts: ipaserver
