Fix DNS for replica rollout plus info

--- a/ansible/handlers/main.yml
+++ b/ansible/handlers/main.yml
@@ -8,3 +8,8 @@
   service:
     name: httpd
     state: restarted
+
+- name: reload_networkmanager
+  service:
+    name: NetworkManager
+    state: reloaded
