docs and bugfixes

--- a/ansible/playbooks/init-rocky-system-config.yml
+++ b/ansible/playbooks/init-rocky-system-config.yml
@@ -4,6 +4,10 @@
   hosts: all
   become: true
 
+  # This is to try to avoid the handler issue in pre/post tasks
+  handlers:
+    - include: handlers/main.yml
+
   pre_tasks:
     - name: Check if ansible cannot be run here
       stat:
