--- a/ansible/playbooks/tasks/ssh-config.yml
+++ b/ansible/playbooks/tasks/ssh-config.yml
@@ -19,8 +19,8 @@
 
   - name: ssh banner
     copy:
-      src: "etc/banner"
-      dest: "{{ ssh_banner }}"
+      src: "etc/rockybanner"
+      dest: "/etc/rockybanner"
       owner: root
       group: root
     notify: restart_ssh
