--- a/ansible/playbooks/init-rocky-system-config.yml
+++ b/ansible/playbooks/init-rocky-system-config.yml
@@ -35,4 +35,7 @@
       file:
         path: /var/log/ansible.run
         state: touch
+        mode: '0644'
+        user: root
+        group: root
 
