--- a/ansible/playbooks/adhoc-facts-refresh.yml
+++ b/ansible/playbooks/adhoc-facts-refresh.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  become: True
+  become: true
   tasks:
     - name: Force a fact refresh to have those available in local cache
       setup:
