Change mirror to where the initial servers are being provisioned

--- a/scripts/libvirt-kickstart/centos8/kickstart.cfg
+++ b/scripts/libvirt-kickstart/centos8/kickstart.cfg
@@ -6,8 +6,8 @@ keyboard us
 skipx                                                                                                    
 text
 
-repo --name="BaseOS" --baseurl=http://ftp.funet.fi/pub/linux/mirrors/centos/8/BaseOS/x86_64/os/
-repo --name="AppStream" --baseurl=http://ftp.funet.fi/pub/linux/mirrors/centos/8/AppStream/x86_64/os/
+repo --name="BaseOS" --baseurl=https://mirror.phx1.us.spryservers.net/centos/8.3.2011/BaseOS/x86_64/os/
+repo --name="AppStream" --baseurl=https://mirror.phx1.us.spryservers.net/centos/8.3.2011/AppStream/x86_64/os/
 
 url --url http://ftp.funet.fi/pub/linux/mirrors/centos/8/BaseOS/x86_64/kickstart/
 
