Separate partitions out a bit more

--- a/scripts/libvirt-kickstart/centos8/kickstart.cfg
+++ b/scripts/libvirt-kickstart/centos8/kickstart.cfg
@@ -33,10 +33,15 @@ part /boot --fstype xfs --size=1024 --asprimary
 part pv.01 --size=1 --grow --asprimary
 volgroup sys_vg pv.01
 
-logvol /      --fstype xfs  --name=root  --vgname=sys_vg --size=4096
-logvol /home  --fstype xfs  --name=home  --vgname=sys_vg --size=1024
-logvol /var   --fstype xfs  --name=var   --vgname=sys_vg --size=4096
-logvol /opt   --fstype xfs  --name=opt   --vgname=sys_vg --size=1024
+# Initial volume sizes are small, but can be extended later
+# total: 15GB, leaves some space for expansion and/or optional swap
+
+logvol /                --fstype xfs  --name=root          --vgname=sys_vg --size=4096
+logvol /home            --fstype xfs  --name=home          --vgname=sys_vg --size=1024
+logvol /var             --fstype xfs  --name=var           --vgname=sys_vg --size=4096
+logvol /var/log/        --fstype xfs  --name=var_log       --vgname=sys_vg --size=2048
+logvol /var/log/audit   --fstype xfs  --name=var_log_audit --vgname=sys_vg --size=2048
+logvol /tmp             --fstype xfs  --name=tmp           --vgname=sys_vg --size=1024
 
 %packages
 @^minimal-environment
