--- a/ansible/playbooks/init-rocky-system-config.yml
+++ b/ansible/playbooks/init-rocky-system-config.yml
@@ -36,5 +36,5 @@
         path: /var/log/ansible.run
         state: touch
         mode: '0644'
-        user: root
+        owner: root
         group: root
