--- a/ansible/playbooks/role-rocky-ipa-client.yml
+++ b/ansible/playbooks/role-rocky-ipa-client.yml
@@ -19,6 +19,9 @@
           - "not no_ansible.stat.exists"
         msg: "/etc/no-ansible exists - skipping run on this node"
 
+    - name: Check if we can see LDAP srv records
+
+
   roles:
     - role: ipaclient
       state: present
@@ -29,5 +32,5 @@
         path: /var/log/ansible.run
         state: touch
         mode: '0644'
-        user: root
+        owner: root
         group: root
