--- a/ansible/playbooks/role-rocky-ipa-replica.yml
+++ b/ansible/playbooks/role-rocky-ipa-replica.yml
@@ -59,5 +59,5 @@
         path: /var/log/ansible.run
         state: touch
         mode: '0644'
-        user: root
+        owner: root
         group: root
