linting test and some fixes for #15

--- a/ansible/playbooks/role-rocky-ipa.yml
+++ b/ansible/playbooks/role-rocky-ipa.yml
@@ -55,3 +55,8 @@
         mode: '0644'
         owner: root
         group: root
+
+    - name: "Turn on reverse zone syncing"
+      ipadnsconfig:
+        ipaadmin_password: '{{ ipaadmin_password }}'
+        allow_sync_ptr: true
