--- a/ansible/playbooks/init-rocky-ipa-internal-dns.yml
+++ b/ansible/playbooks/init-rocky-ipa-internal-dns.yml
@@ -18,5 +18,6 @@
     - name: "Create Reverse Domains"
       ipadnszone:
         ipaadmin_password: '{{ ipaadmin_password }}'
-        name: '{{ internal_domain }}'
+        name: '{{ item }}'
       with_items: '{{ rdns }}'
+
