--- a/ansible/playbooks/role-rocky-ipa-replica.yml
+++ b/ansible/playbooks/role-rocky-ipa-replica.yml
@@ -33,7 +33,7 @@
         value: none
         owner: root
         group: root
-        mode: 0644
+        mode: '0644'
         backup: true
       notify:
         - reload_networkmanager
@@ -44,7 +44,7 @@
         dest: /etc/resolv.conf
         owner: root
         group: root
-        mode: 0644
+        mode: '0644'
         backup: true
       notify:
         - reload_networkmanager
