Use pam_limits module to set limits

--- a/ansible/playbooks/vars/RedHat.yml
+++ b/ansible/playbooks/vars/RedHat.yml
@@ -17,6 +17,10 @@ remove_packages:
   - rsh
   - lftp
 
+# security limits
+limits:
+  - { domain: '*', limit_type: hard, limit_item: core, value: 0 }
+
 # sysctl settings
 sysctl_config:
   net.ipv4.ip_forward: 0
