--- a/ansible/playbooks/tasks/harden.yml
+++ b/ansible/playbooks/tasks/harden.yml
@@ -20,14 +20,14 @@
         - harden
         - kernel
 
-    - name: security limits
-      copy:
+    - name: Security limits
+      pam_limits:
         dest: "/etc/security/limits.d/cis.conf"
-        owner: root
-        group: root
-        mode: '0644'
-        content: |
-          * hard core 0
+        domain: "{{ item.domain }}"
+        limit_type: "{{ item.limit_type }}"
+        limit_item: "{{ item.limit_item }}"
+        value: "{{ item.value }}"
+      with_items: "{{ limits }}"
       tags:
         - harden
 
