--- a/ansible/playbooks/tasks/variable_loader_common.yml
+++ b/ansible/playbooks/tasks/variable_loader_common.yml
@@ -10,7 +10,7 @@
       include_vars: "{{ item }}"
       with_first_found:
         - "ipaserver.yml"
-      when: "'ipaservers' in group_names"
+      when: "'ipa' in group_names"
 
     - name: Check if system is EFI
       stat:
