move requirements file to roles directory create a playbook to initialize the host running all the ansible code create a tmp folder to hold logs and knownhost file, for easy cleanup and reprovisioning of dev hosts

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,1 +1,6 @@
-# Empty
+########################################
+# Common destinations
+########################################
+
+log_path		= tmp/ansible.log
+known_hosts     = tmp/known_hosts
