make hosts inventory universal without domain name

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -54,7 +54,7 @@ fact_caching = json
 #fact_caching = memory
 fact_caching_timeout = 1800
 
-# Enable or disable logs :
+# Enable or disable logs
 # Note put to false in prod
 no_log = False
 
