set fact caching to mem for now

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -49,9 +49,9 @@ gathering = smart
 #gathering = network,!hardware,virtual,!ohai,!facter
 
 # facts caching
-fact_caching_connection = tmp/facts_cache
-fact_caching = json
-#fact_caching = memory
+#fact_caching_connection = tmp/facts_cache
+#fact_caching = json
+fact_caching = memory
 fact_caching_timeout = 1800
 
 # Enable or disable logs
