--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -1,3 +1,8 @@
 ---
-- src: freeipa.ansible_freeipa
-- src: community.general
+
+roles:
+
+collections:
+  # community ansible collection (needed for freeipa)
+  - name: community.general
+
