fix ipa role name to use correct ipa colelction name

--- a/ansible/playbooks/role-rocky-ipa.yml
+++ b/ansible/playbooks/role-rocky-ipa.yml
@@ -43,7 +43,7 @@
         - reload_networkmanager
 
   roles:
-    - role: ipaserver
+    - role: community.general.ipa_role
       state: present
 
   post_tasks:
