--- a/ansible/playbooks/init-rocky-ansible-host.yml
+++ b/ansible/playbooks/init-rocky-ansible-host.yml
@@ -34,9 +34,9 @@
     - name: Install needed collections
       command: >
         ansible-galaxy collection install
-        {{ ( force_purge | bool ) | ternary('--force','') }}
+        {{ ( force_purge | bool ) | ternary('--force-with-deps','') }}
         -r {{ installation_prefix }}tmp/collections.yml
-        --roles-path {{ installation_prefix }}{{ installation_dir }}
+        -p {{ installation_prefix }}{{ installation_dir }}
 
     - name: cleanup old ssh known_hosts
       file:
