--- a/ansible/playbooks/init-rocky-ansible-host.yml
+++ b/ansible/playbooks/init-rocky-ansible-host.yml
@@ -4,7 +4,8 @@
   connection: local
   vars:
     force_purge: true
-    installation_dir: roles/public
+    roles_installation_dir: roles/public
+    collection_installation_dir: tmp
     installation_prefix: ../
   pre_tasks:
 # example prepare ansible box for execution
@@ -20,7 +21,7 @@
 
     - name: Remove existing public roles
       file:
-        path: "{{ installation_prefix }}{{ installation_dir }}"
+        path: "{{ installation_prefix }}{{ roles_installation_dir }}"
         state: absent
       when: force_purge | bool
 
@@ -29,14 +30,14 @@
         ansible-galaxy install
         {{ ( force_purge | bool ) | ternary('--force','') }}
         --role-file {{ installation_prefix }}roles/roles.yml
-        --roles-path {{ installation_prefix }}{{ installation_dir }}
+        --roles-path {{ installation_prefix }}{{ roles_installation_dir }}
 
     - name: Install needed collections
       command: >
         ansible-galaxy collection install
         {{ ( force_purge | bool ) | ternary('--force-with-deps','') }}
-        -r {{ installation_prefix }}tmp/collections.yml
-        -p {{ installation_prefix }}{{ installation_dir }}
+        -r {{ installation_prefix }}roles/collections.yml
+        -p {{ installation_prefix }}{{ collection_installation_dir }}
 
     - name: cleanup old ssh known_hosts
       file:
