--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -65,4 +65,4 @@ no_log = False
 
 log_path		= tmp/ansible.log
 known_hosts     = tmp/known_hosts
-roles_path		= roles/local:roles/public:tmp
+roles_path		= roles/local:roles/public:tmp/ansible_collections
