Add default swap and mount /tmp via tmpfs

--- a/scripts/libvirt-kickstart/centos8/kickstart.cfg
+++ b/scripts/libvirt-kickstart/centos8/kickstart.cfg
@@ -11,10 +11,8 @@ repo --name="AppStream" --baseurl=https://mirror.phx1.us.spryservers.net/centos/
 
 url --url http://ftp.funet.fi/pub/linux/mirrors/centos/8/BaseOS/x86_64/kickstart/
 
-# On CentOS 8, we will not disable NetworkManager, but this is here for
-# reference
-#services --disabled=NetworkManager --enabled=network
-
+# mount /tmp as tmpfs
+services --enabled=tmp.mount
                                                 
 rootpw CHANGEME
 firewall --disabled
@@ -41,7 +39,7 @@ logvol /home            --fstype xfs  --name=home          --vgname=sys_vg --siz
 logvol /var             --fstype xfs  --name=var           --vgname=sys_vg --size=4096
 logvol /var/log/        --fstype xfs  --name=var_log       --vgname=sys_vg --size=2048
 logvol /var/log/audit   --fstype xfs  --name=var_log_audit --vgname=sys_vg --size=2048
-logvol /tmp             --fstype xfs  --name=tmp           --vgname=sys_vg --size=1024
+logvol swap             --fstype swap --name swap          --vgname sys_vg --size=2048
 
 %packages
 @^minimal-environment
