Update doc comment

--- a/scripts/libvirt-kickstart/centos8/kickstart.cfg
+++ b/scripts/libvirt-kickstart/centos8/kickstart.cfg
@@ -32,7 +32,7 @@ part pv.01 --size=1 --grow --asprimary
 volgroup sys_vg pv.01
 
 # Initial volume sizes are small, but can be extended later
-# total: 15GB, leaves some space for expansion and/or optional swap
+# total: 18GB, leaves some space for expansion
 
 logvol /                --fstype xfs  --name=root          --vgname=sys_vg --size=6144
 logvol /home            --fstype xfs  --name=home          --vgname=sys_vg --size=1024
