fix collections installation

--- a/ansible/playbooks/init-rocky-ansible-host.yml
+++ b/ansible/playbooks/init-rocky-ansible-host.yml
@@ -27,16 +27,16 @@
 
     - name: Install all public roles
       command: >
-        ansible-galaxy install
+        ansible-galaxy role install
         {{ ( force_purge | bool ) | ternary('--force','') }}
-        --role-file {{ installation_prefix }}roles/roles.yml
+        --role-file {{ installation_prefix }}roles/requirements.yml
         --roles-path {{ installation_prefix }}{{ roles_installation_dir }}
 
     - name: Install needed collections
       command: >
         ansible-galaxy collection install
         {{ ( force_purge | bool ) | ternary('--force-with-deps','') }}
-        -r {{ installation_prefix }}roles/collections.yml
+        -r {{ installation_prefix }}roles/requirements.yml
         -p {{ installation_prefix }}{{ collection_installation_dir }}
 
     - name: cleanup old ssh known_hosts
