move ipa role to collection

--- a/ansible/playbooks/role-rocky-ipa.yml
+++ b/ansible/playbooks/role-rocky-ipa.yml
@@ -42,9 +42,8 @@
       notify:
         - reload_networkmanager
 
-  roles:
-    - role: community.general.ipa_role
-      state: present
+  collections:
+    - community.general.ipa_role
 
   post_tasks:
     - name: Touching run file that ansible has ran here
