Adjust volume sizes some more

--- a/scripts/libvirt-kickstart/centos8/kickstart.cfg
+++ b/scripts/libvirt-kickstart/centos8/kickstart.cfg
@@ -32,14 +32,14 @@ part pv.01 --size=1 --grow --asprimary
 volgroup sys_vg pv.01
 
 # Initial volume sizes are small, but can be extended later
-# total: 18GB, leaves some space for expansion
+# total: 20GB, leaves some space for expansion
 
-logvol /                --fstype xfs  --name=root          --vgname=sys_vg --size=6144
-logvol /home            --fstype xfs  --name=home          --vgname=sys_vg --size=1024
-logvol /var             --fstype xfs  --name=var           --vgname=sys_vg --size=4096
-logvol /var/log/        --fstype xfs  --name=var_log       --vgname=sys_vg --size=2048
-logvol /var/log/audit   --fstype xfs  --name=var_log_audit --vgname=sys_vg --size=2048
-logvol swap             --fstype swap --name swap          --vgname sys_vg --size=2048
+logvol /                --fstype xfs                      --name=root          --vgname=sys_vg --size=6144
+logvol /home            --fstype xfs  --fsoptions="nodev" --name=home          --vgname=sys_vg --size=1024
+logvol /var             --fstype xfs                      --name=var           --vgname=sys_vg --size=4096
+logvol /var/log/        --fstype xfs                      --name=var_log       --vgname=sys_vg --size=4096
+logvol /var/log/audit   --fstype xfs                      --name=var_log_audit --vgname=sys_vg --size=2048
+logvol swap             --fstype swap                     --name swap          --vgname sys_vg --size=2048
 
 %packages
 @^minimal-environment
