--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -66,4 +66,4 @@ no_log = False
 log_path		= tmp/ansible.log
 known_hosts     = tmp/known_hosts
 roles_path		= roles/local:roles/public
-collections_path = tmp/ansible_collections
+collections_paths = ./
