trial with different collection name

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -6,7 +6,7 @@
 
 # Output display
 force_color		= 1
-nocows			= 0
+nocows			= True
 
 
 # Note: http://docs.ansible.com/ansible/intro_configuration.html#ansible-managed
