--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -1,7 +1,7 @@
 ---
 
 roles:
-
+  - src: freeipa.ansible_freeipa
+    version: 0.3.1
 collections:
-  # freeipa
-  - name: freeipa.ansible_freeipa
+
