update readme file

--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -9,6 +9,9 @@ ipaserver
 ipareplicas
 ipaclients
 
+[ipsilon]
+idp001 ansible_host=10.100.x.x
+
 # Playbook and role specific inventory hosts and groups
 [ipaserver]
 ipa001 ansible_host=10.100.1.110
@@ -18,3 +21,4 @@ ipa002 ansible_host=10.100.1.111
 
 [ipaclients]
 build-a-box ansible_host=10.100.1.112
+
