Satisfy ansible-lint

--- a/ansible/roles/pxeserver/tasks/main.yml
+++ b/ansible/roles/pxeserver/tasks/main.yml
@@ -33,6 +33,7 @@
 
 - name: 'Create UEFI PXE-boot configuration directory'
   file:
+    mode: '0755'
     path: '/var/lib/tftpboot/uefi'
     state: directory
 
